Strip most I prefixes from interfaces